--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,10 +1,10 @@
 // 颜色
-$accentColor = #4475a7
+$accentColor = #0082F0
 $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
-$badgeTipColor = #4875AE
+$badgeTipColor = #0082F0
 $badgeWarningColor = darken(#ffe564, 35%)
 $badgeErrorColor = #DA5961
 
